fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,5 @@ body {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%
 }
