--- a/src/pyramid.css
+++ b/src/pyramid.css
@@ -35,7 +35,7 @@
   opacity: 0.25;
 }
 .colText {
-  font-size: 1.5vw;
+  font-size: 2.0vw;
    position: absolute;
 
 }
